# zx0-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: benchmark.rs  fuzzer.rs
reference/: Cargo.toml  build.rs
reference/src/: compress.c  lib.rs  memory.c  optimize.c  zx0.h
src/: compress.rs  compressor.rs  lib.rs  main.rs  optimize.rs
